# GiggleTech_OSC_Router

./: .gitignore  Cargo.toml  README.md  change_log.txt  config copy.yml  config.ini  config.yml  config_4dev_working.yml  giggletech_osc_router_log.txt
giggletech-router/: Cargo.toml
giggletech-router/src/: config.rs  data_processing.rs  error.rs  giggletech_osc.rs  handle_proximity_parameter.rs  handle_proximity_parameter_pool_toy.rs  kays_pat_decay.rs  logger.rs  main.rs  message.rs  osc_timeout.rs  path.rs  pool_toy_valve_control.rs  replay.rs  routerv2.rs  stop_pats.rs  terminator.rs  tray.rs
giggletech-router/src/config/: config_validator.rs  oscq_giggletech.rs  yaml_validator.rs
giggletech-web/web/: index.html
giggletech-web/web/static/: app.js  style.css
src/: config.rs  data_processing.rs  giggletech_osc.rs  lib.rs  main.rs  socket_setup.rs  terminator.rs
