[package]
name = "async-osc"
version = "0.2.0"
description = "Heavy Modded Async "
readme = "README.md"
edition = "2018"
keywords = ["osc", "audio", "async-std"]
authors = ["Jason Beattie <jason.beattie@protonmail.com>"
]

[features]

[dependencies]
rosc = "0.4.2"
async-std =  "1.12.0"
log = "0.4.14"
futures-lite = "1.11.3"
thiserror = "1.0.24"
configparser = "3.0.2"
lazy_static = "1.4.0"
tokio = { version = "1.13", features = ["full"] }
futures = "0.3"



[dev-dependencies]
async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
