[package]
name = "async-osc"
version = "1.0.0"
description = "Heavy Modded Async "
readme = "README.md"
edition = "2018"
keywords = ["osc", "vrchat", "async-std"]
authors = ["Giggle Tech <hello@giggletech.io>"
]

[features]

[dependencies]
rosc = "0.4.2"
async-std = { version = "1.8.0", features = ["attributes", "unstable"] }
#async-std =  "1.12.0"
log = "0.4.14"
futures-lite = "1.11.3"
thiserror = "1.0.24"
configparser = "3.0.2"
lazy_static = "1.4.0"
tokio = { version = "1.13", features = ["full"] }
futures = "0.3"
#ini = "1.3.0"
anyhow = "1.0.44"
once_cell = "1.8.0"
tray-icon = "0.11.3"
winit = "0.29.12"
image = "0.24"
log4rs = "1.3.0"





[dev-dependencies]
async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
