[package]
name = "async-osc"
version = "1.0.0"
description = "Heavy Modded Async "
readme = "README.md"
edition = "2018"
keywords = ["osc", "vrchat", "async-std"]
authors = ["Giggle Tech <hello@giggletech.io>"
]

[features]

[dependencies]
rosc = "0.4.2"                            # Library for working with OSC (Open Sound Control) protocol
async-std = { version = "1.8.0", features = ["attributes", "unstable"] }  # Async runtime with attributes and unstable features
log = "0.4.14"                            # Logging library for structured and leveled logging
futures-lite = "1.11.3"                   # Minimal futures and async support, integrates well with async-std
thiserror = "1.0.24"                      # Library for defining custom error types in an easy way
configparser = "3.0.2"                    # Config parser for parsing `.ini`-style config files
lazy_static = "1.4.0"                     # Macro for declaring lazily evaluated statics
tokio = { version = "1", features = ["full"] } # Async runtime for Rust, using full feature set
futures = "0.3"                           # Futures support for async programming
anyhow = "1.0.44"                         # Error handling library for easy error propagation and context
once_cell = "1.8.0"                       # Provides lazy initialization via `OnceCell` and `Lazy`
yaml-rust = "0.4.5"                       # YAML parser and emitter for Rust
reqwest = { version = "0.11", features = ["json", "blocking"] } # HTTP client library, with support for JSON and blocking requests
execute = "0.2.13"                        # Library for easily executing system commands
dirs = "4.0"                              # Library to retrieve platform-specific directories (like AppData)
serde = { version = "1.0", features = ["derive"] }  # Serialization/deserialization framework, with support for `derive`
serde_yaml = "0.9"                        # YAML support for `serde`
rocket = "0.5.0-rc.1"
hyper = { version = "0.14", features = ["full"] }
async-h1 = "2.3.4"
tide = "0.16"





[dev-dependencies]
async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
